WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124156
InvalidIndex shouldn't be private in GPRInfo and FPRInfo
https://bugs.webkit.org/show_bug.cgi?id=124156
Summary
InvalidIndex shouldn't be private in GPRInfo and FPRInfo
Julien Brianceau
Reported
2013-11-11 10:20:13 PST
InvalidIndex is currently private in GPRInfo and FPRInfo for sh4 and mips ports unlike other arch, leading to build issue.
Attachments
Build fix
(1.87 KB, patch)
2013-11-11 10:23 PST
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-11-11 10:23:07 PST
Created
attachment 216586
[details]
Build fix
WebKit Commit Bot
Comment 2
2013-11-11 11:04:40 PST
Comment on
attachment 216586
[details]
Build fix Rejecting
attachment 216586
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 216586, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: t.org/repository/webkit/trunk ... Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Password for '
commit-queue@webkit.org
': Authentication realm: <
http://svn.webkit.org:80
> Mac OS Forge Username: Use of uninitialized value $username in chomp at /usr/share/git-core/perl/Git/SVN/Prompt.pm line 114. error: git-svn died of signal 11 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 139 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output:
http://webkit-queues.appspot.com/results/22719368
Csaba Osztrogonác
Comment 3
2013-11-12 00:19:02 PST
Comment on
attachment 216586
[details]
Build fix Clearing flags on attachment: 216586 Committed
r159099
: <
http://trac.webkit.org/changeset/159099
>
Csaba Osztrogonác
Comment 4
2013-11-12 00:19:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug