InvalidIndex shouldn't be private in GPRInfo and FPRInfo for sh4, mips and arm64 architectures. https://bugs.webkit.org/show_bug.cgi?id=124156

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-11-12
Reviewed by Michael Saboff.

* jit/FPRInfo.h:
(JSC::FPRInfo::debugName):
* jit/GPRInfo.h:
(JSC::GPRInfo::debugName):

Canonical link: https://commits.webkit.org/142385@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159099 268f45cc-cd09-0410-ab3c-d52691b4dbfc