Source/JavaScriptCore/jit/FPRInfo.h
@@ -257,7 +257,6 @@ public:
         return nameForRegister[reg];
     }
 
-private:
     static const unsigned InvalidIndex = 0xffffffff;
 };
 
@@ -324,7 +323,6 @@ public:
         };
         return nameForRegister[reg];
     }
-private:
 
     static const unsigned InvalidIndex = 0xffffffff;
 };
@@ -388,7 +386,6 @@ public:
         return nameForRegister[reg];
     }
 
-private:
     static const unsigned InvalidIndex = 0xffffffff;
 };
 
